<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_keyword_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/marginTextView"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginTop"
        android:layout_weight="10"
        android:textSize="18sp"
        android:text="@string/Palabra_Clave"
        android:gravity="center_vertical"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_btn_delete_keyword"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_marginLeft="@dimen/marginLogo"
        android:layout_marginTop="@dimen/marginLogo"
        android:layout_marginRight="@dimen/marginLogo"
        android:layout_marginBottom="@dimen/marginLogo"
        android:layout_weight="0"
        android:background="@drawable/btn_add"
        android:foreground="@android:drawable/ic_delete"/>

</LinearLayout>